unpackaged/main/default/objects/Target_Accounts__c/Target_Accounts__c.object-meta.xml
<CustomObject>
    <label>PAC / Accounts</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Target Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAC / Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>