unpackaged/main/default/objects/Target_Accounts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PAC / Accounts</relationshipLabel>
    <relationshipName>Plan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>