unpackaged/main/default/objects/Target_Accounts__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TO BE DELETED Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>