unpackaged/main/default/objects/Target_Accounts__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Key</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>