unpackaged/main/default/objects/Target_Accounts__c/fields/Motifs__c.field-meta.xml
<CustomField>
    <fullName>Motifs__c</fullName>
    <label>Motifs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for notification stopping phone support</fullName>
            </value>
            <value>
                <fullName>Away to the competitor</fullName>
            </value>
            <value>
                <fullName>Already signed</fullName>
            </value>
            <value>
                <fullName>In-house development</fullName>
            </value>
            <value>
                <fullName>Out of scope</fullName>
            </value>
            <value>
                <fullName>Interlocutor can’t be reached</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>No budget / No project</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Advice from its accountant</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Financial situation</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Other channel</fullName>
            </value>
            <value>
                <fullName>Interlocutor reached</fullName>
            </value>
            <value>
                <fullName>Proposal in progress</fullName>
            </value>
            <value>
                <fullName>Interlocutor not reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>