unpackaged/main/default/objects/Target_Accounts__c/fields/OwnerAgency__c.field-meta.xml
<CustomField>
    <fullName>OwnerAgency__c</fullName>
    <formula>Text(Owner:User.Agency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Agency</label>
    <type>Text</type>
</CustomField>