unpackaged/main/default/objects/Target_Accounts__c/fields/OwnerManagerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerManagerName__c</fullName>
    <formula>Owner:User.Manager.FirstName + ' ' +  Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager Name</label>
    <type>Text</type>
</CustomField>