unpackaged/main/default/objects/Target_Accounts__c/fields/OwnerSalesType__c.field-meta.xml
<CustomField>
    <fullName>OwnerSalesType__c</fullName>
    <formula>TEXT( Owner:User.Sale_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sales Type</label>
    <type>Text</type>
</CustomField>