unpackaged/main/default/objects/Target_Accounts__c/fields/Targeting_Plan__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeting Plan</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>PAC inactif</errorMessage>
        <filterItems>
            <field>Targeting_Plan__c.End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Targeting_Plan__c.Date_du_jour__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Targeting_Plan__c</referenceTo>
    <relationshipLabel>PAC / Accounts</relationshipLabel>
    <relationshipName>Plan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>