unpackaged/main/default/objects/Target_Accounts__c/fields/TECH_User__c.field-meta.xml
<CustomField>
    <fullName>TECH_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used in LWC accMassAssignment</description>
    <label>TECH_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PAC_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>