unpackaged/main/default/objects/Target_Accounts__c/validationRules/VR001_Check_Motifs.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_Check_Motifs</fullName>
    <active>true</active>
    <description>if status  (PAC/Account) is  "Rejected" then Motifs must be mandatory</description>
    <errorConditionFormula>AND (
NOT($User.BypassVR__c),
ISPICKVAL( Motifs__c ,""),
ISPICKVAL( Status__c ,"Rejected")
)</errorConditionFormula>
    <errorMessage>"Motifs" is mandatory when status is "Rejected".</errorMessage>
</ValidationRule>