unpackaged/main/default/objects/Target_Accounts__c/listViews/My_PAC_Accounts.listView-meta.xml
<ListView>
    <fullName>My_PAC_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Targeting_Plan__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My PAC Accounts</label>
</ListView>